Bug 763022 - Report telemetry data for the number of service related errors people encountered. r=rstrong